[package]
name = "cbpro"
version = "0.1.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"
description = "Client library for Coinbase Pro"
documentation = "https://docs.rs/cbpro"
repository = "https://github.com/kgeronim/cbpro"
keywords = ["coinbase", "gdax", "crypto", "exchange", "trade"]
categories = ["api-bindings", "Cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
futures = "0.3.1"
chrono = "0.4.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_urlencoded = "0.6.1"
hmac = "0.7.1"
base64 = "0.11.0"
sha2 = "0.8.0"
async-tungstenite = "0.2.1"
url = "2.1.0"
crypto-mac = { version = "0.7.0", features = ["std"] }

[dependencies.async-std]
version = "1.4.0"
default-features = false
features = ["std"]

[dev-dependencies]
tokio-timer = "0.3.0-alpha.5"
tokio = { version = "0.2.0-alpha.6", features = ["macros"] }