[package]
name = "cbpro"
version = "0.7.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"
description = "Client library for Coinbase Pro"
documentation = "https://docs.rs/cbpro"
repository = "https://github.com/kgeronim/cbpro"
keywords = ["coinbase", "gdax", "crypto", "exchange", "trade"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "README.md"
license = "MIT"

[dependencies]
serde_json = "1.0.45"
reqwest = { version = "0.10.1", features = ["json"] }
futures = "0.3.1"
chrono = "0.4.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_urlencoded = "0.6.1"
hmac = "0.7.1"
base64 = "0.11.0"
sha2 = "0.8.1"
async-tungstenite = { version = "0.3.1", features = ["tokio-runtime", "tokio-tls"] }
url = "2.1.1"
crypto-mac = { version = "0.7.0", features = ["std"] }
tokio = { version = "0.2.11", features = ["macros", "time"] }
tokio-tls = "0.3.0"
log = "0.4.8"