[package]
name = "cbpro"
version = "0.9.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"
description = "Client library for Coinbase Pro"
documentation = "https://docs.rs/cbpro"
repository = "https://github.com/kgeronim/cbpro"
keywords = ["coinbase", "gdax", "crypto", "exchange", "trade"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "README.md"
license = "MIT"

[dependencies]
serde_json = { version = "^1.0.47" }
reqwest = { version = "^0.11.0", features = ["json"] }
futures = "0.3.4"
chrono = "0.4.10"
serde = { version = "^1.0.104", features = ["derive"] }
serde_urlencoded = "^0.6.1"
hmac = "0.7.1"
base64 = "0.11.0"
sha2 = "0.8.1"
async-tungstenite = { version = "^0.12.0", features = ["tokio-runtime", "tokio-native-tls"] }
url = "2.1.1"
crypto-mac = { version = "0.7.0", features = ["std"] }
tokio = { version = "^1.2.0", features = ["macros", "time", "rt-multi-thread"] }
tokio-native-tls = "^0.3.0"
log = "0.4.8"
